WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279161
Writing tools animations on iOS don't have the second part of the animation.
https://bugs.webkit.org/show_bug.cgi?id=279161
Summary
Writing tools animations on iOS don't have the second part of the animation.
Megan Gardner
Reported
2024-09-04 17:17:59 PDT
Writing tools animations on iOS don't have the second part of the animation.
Attachments
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2024-09-04 17:18:00 PDT
<
rdar://problem/132367375
>
Megan Gardner
Comment 2
2024-09-04 17:29:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33158
EWS
Comment 3
2024-09-05 21:51:40 PDT
Committed
283248@main
(da92dcfbdd3a): <
https://commits.webkit.org/283248@main
> Reviewed commits have been landed. Closing PR #33158 and removing active labels.
EWS
Comment 4
2024-09-09 10:05:42 PDT
Committed
280938.316@safari-7619-branch
(b33e3f6e7b59): <
https://commits.webkit.org/280938.316@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1704 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug